# factorial_backend

./: .gitignore  Dockerfile  README  config.py  docker-compose.yml  pyproject.toml  pyvenv.cfg
src/: es.py  main.py
